feat: event service 수정
- update 로직 리소스 없을 경우에 not found error발생 혹은 return false하도록 수정
- dto 형태 수정: placeId가 아닌 place객체를 가직도록해 연관된 객체도 함께 조회가능하도록 수정.